--- a/class-basic/my-app/src/app/globals.css
+++ b/class-basic/my-app/src/app/globals.css
@@ -1,27 +1,20 @@
+/*******************************************************
+* {
+  box-sizing: border-box; => 이거 안써도됨, @tailwind base에 들어있음
+}
+*******************************************************/
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
+/* 내가 만드는 부트스트랩 CSS */
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+  .chulsooBox {
+    color: green;
+    font-size: 30px;
+  } 
+}
+
+* {
+  font-family: var(--글로벌폰트변수);
 }
